--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:text="2124242"
             android:textColor="#000000"
             android:textSize="18sp" />
+
         <TextView
             android:id="@+id/code_content"
             android:layout_width="0dp"
@@ -27,6 +28,7 @@
             android:text="2124242"
             android:textColor="#000000"
             android:textSize="18sp" />
+
         <Button
             android:id="@+id/btn_introduce"
             android:layout_width="wrap_content"
@@ -55,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="生成" />
+
         <Button
             android:id="@+id/create_colorcode"
             android:layout_width="0dp"
@@ -64,12 +67,6 @@
 
     </LinearLayout>
 
-    <testdemo.sunyard.com.ImageSurfaceView
-        android:id="@+id/imgsur"
-        android:layout_width="500dp"
-        android:layout_height="300dp"
-        android:layout_above="@+id/btn3"
-        android:layout_centerHorizontal="true" />
 
     <ImageView
         android:id="@+id/img"
@@ -78,30 +75,104 @@
         android:layout_centerInParent="true"
         android:src="@drawable/ic_launcher" />
 
-    <Button
-        android:id="@+id/btn_intent"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="旋转图片" />
+        android:layout_above="@+id/bomll"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/btn_red"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="1" />
 
+        <Button
+            android:id="@+id/btn_blue"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="2" />
 
+        <Button
+            android:id="@+id/btn_cyan"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="3" />
 
-    <Button
+        <Button
+            android:id="@+id/btn_dkgray"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="4" />
 
-        android:id="@+id/btn3"
-        android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btn_green"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="5" />
+
+        <Button
+            android:id="@+id/btn_magenta"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="6" />
+
+        <Button
+            android:id="@+id/btn_yellow"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="7" />
+
+        <Button
+            android:id="@+id/btn_ltggay"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="8" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bomll"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="上下镜像" />
-    <Button
-android:layout_alignParentRight="true"
-        android:id="@+id/btn_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+        <Button
+            android:id="@+id/btn_intent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="30°旋转" />
 
-        android:text="左右镜像" />
+        <Button
+
+            android:id="@+id/btn_light"
+            android:text="亮度调节"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btn3"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+
+            android:text="上下镜像" />
+
+        <Button
+            android:id="@+id/btn_left"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+
+            android:text="左右镜像" />
+    </LinearLayout>
+
 </RelativeLayout>
