--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -174,6 +174,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="30°旋转" />
+        <Button
+            android:id="@+id/btn_rotate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="自动旋转" />
 
         <Button
 
